non-compatible/tests/ecc-gcp-030-no_ssh_from_internet/placebo-green/get-compute-v1-projects-cloud-custodian-global-firewalls_1.json
{
  "headers": {
    "etag": "dxWOWQi2RIT_pB7BYExkULTRIs0=/E5iccCQbBvn2sYllX3FR2UoX75I=",
    "content-type": "application/json; charset=UTF-8",
    "vary": "Origin, X-Origin, Referer",
    "date": "Fri, 04 Nov 2022 07:20:31 GMT",
    "server": "ESF",
    "cache-control": "private",
    "x-xss-protection": "0",
    "x-frame-options": "SAMEORIGIN",
    "x-content-type-options": "nosniff",
    "transfer-encoding": "chunked",
    "status": "200",
    "content-length": "6607",
    "-content-encoding": "gzip",
    "content-location": "https://compute.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls?alt=json"
  },
  "body": {
    "kind": "compute#firewallList",
    "id": "projects/cloud-custodian/global/firewalls",
    "items": [
      {
        "kind": "compute#firewall",
        "id": "1776979384021353468",
        "creationTimestamp": "2022-11-04T00:19:47.810-07:00",
        "name": "no-ssh-from-internet-030-green",
        "description": "",
        "network": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/default",
        "priority": 1000,
        "sourceRanges": [
          "10.0.0.0/16"
        ],
        "allowed": [
          {
            "IPProtocol": "icmp"
          }
        ],
        "direction": "INGRESS",
        "logConfig": {
          "enable": false
        },
        "disabled": false,
        "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls/no-ssh-from-internet-030-green"
      }
    ],
    "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls"
  }
}
